--- a/private/add.html
+++ b/private/add.html
@@ -49,28 +49,27 @@
       </nav>
     </header>
     <div>
-      <h1 ng-controller="userCtrl"> Welcome {{userName}}, welcome to your Profile !</h1>
-      <h2> New Tickets</h2>
+      <h1 ng-controller="userCtrl">Hy {{userName}}, reporting an issue ?</h1>
+      <h2> Create Tickets</h2>
       <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
-      <div ng-controller="newTicketCtrl">
-        <p>
-          <span>Ticket Id</span>
-          <span>Summary</span>
+      <form ng-controller="addTicketCtrl">
+        <label>
+          <span>Summary :</span>
+          <input type="text" ng-model="summary" name="summary" placeholder="Ticket name" required />
+        </label>
+        <label>
+          <span>Description :</span>
+          <input type="textarea" rows="4" cols="50" ng-model="summary" name="summary" placeholder="Ticket name" required />
+        </label>
+        <label>
+          <span>Summary :</span>
+          <input type="text" ng-model="summary" name="summary" placeholder="Ticket name" required />
+        </label>
+        <label>
           <span>Priority</span>
-          <span>Reported by</span>
-          <span>Status</span>
-          <span>Action</span>
-        </p>
-        <!-- Get all tickets from tickets table (cf scope in controller) -->
-        <p ng-repeat="t in ta">
-          <span>t.id</span>
-          <span>t.sum</span>
-          <span>t.pri</span>
-          <span>t.rep</span>
-          <span>t.sta</span>
-          <span>t.act</span>
-        </p>
-      </div>
+          <select ng-model="priority" name="priority" ng-options="o in olist" required>
+          </select>
+      </form>
     </div>
   </body>
 </html>
