--- a/private/show.html
+++ b/private/show.html
@@ -39,7 +39,7 @@
         <h2>Enjoy being Agile</h2>
       </bar>
       <!-- Navigation tools -->
-      <nav>
+       <nav>
         <ul>
           <li><a href="private/">New Tickets</a></li>
           <li><a href="add.html">Create Ticket</a></li>
@@ -49,10 +49,9 @@
       </nav>
     </header>
     <div>
-      <h1 ng-controller="userCtrl"> Welcome {{userName}}, welcome to your Profile !</h1>
-      <h2> New Tickets</h2>
+      <h2> All tickets</h2>
       <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
-      <div ng-controller="newTicketCtrl">
+      <div ng-controller="allTicketCtrl">
         <p>
           <span>Ticket Id</span>
           <span>Summary</span>
