--- a/private/add.html
+++ b/private/add.html
@@ -5,8 +5,8 @@
     <meta name='viewport' content='initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width' />
     <title>SupJiralo, the agile board from Supinfo !</title>
     <!-- loading JS -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/angular/angular.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/angular/angular.js"></script>
     <style type="text/css">
       html, body {
           /* The split-pane needs a container with width and height. */
@@ -41,7 +41,7 @@
       <!-- Navigation tools -->
       <nav>
         <ul>
-          <li><a href="private/">New Tickets</a></li>
+          <li><a href="index.html">New Tickets</a></li>
           <li><a href="add.html">Create Ticket</a></li>
           <li><a href="show.html">All Tickets</a></li>
           <li ng-controller="logoutCtrl"><input ng-click="destoy()" type="button" name="submit" value="Logout" /></a></li>
