--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-.<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset='utf-8' />
@@ -6,10 +6,11 @@
     <title>SupJiralo, the agile board from Supinfo !</title>
     <!-- loading JS -->
     <script src="bower_components/angular/angular.js"></script>
-    <script src="angoose/angoose-client.js"></script>
-    <script serc='js/controllers.js'></script>
+    <script src="/angoose/angoose-client.js"></script>
+    <script src='js/app.js'></script>
+    <script src='js/controllers/loginCtrl.js'></script>
   </head>
-  <body ng-app="jirallo">
+  <body ng-app='jirallo'>
     <header>
       <h1>SupJiralo</h1>
       <h2>Enjoy being Agile</h2>
