--- a/private/index.html
+++ b/private/index.html
@@ -1,57 +1,44 @@
-<!DOCTYPE html>
-<html ng-app>
-  <head>
-    <meta charset='utf-8' />
-    <meta name='viewport' content='initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width' />
-    <title>SupJiralo, the agile board from Supinfo !</title>
-    <!-- Loading CSS -->
-    <link href='../style/style.css' rel='stylesheet'>
-    <!-- loading JS -->
-    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="../bower_components/angular/angular.js"></script>
-  </head>
-  <body>
+<div>
   <!-- Header to be inserted on every page.  -->
-    <header>
-      <!-- Please don't use <img> tag for logo. It should be a DIV background image instead :) -->
-      <div class="logo"></div>
-      <bar>
-        <h1>SupJiralo</h1>
-        <h2>Enjoy being Agile</h2>
-      </bar>
-      <!-- Navigation tools -->
-      <nav>
-        <ul>
-          <li><a href="index.html">New Tickets</a></li>
-          <li><a href="add.html">Create Ticket</a></li>
-          <li><a href="show.html">All Tickets</a></li>
-          <li ng-controller="logoutCtrl"><input ng-click="destoy()" type="button" name="submit" value="Logout" /></a></li>
-        </ul>
-      </nav>
-    </header>
-    <div>
-      <h1 ng-controller="userCtrl"> Welcome {{userName}}, welcome to your Profile !</h1>
-      <h2> New Tickets</h2>
-      <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
-      <div ng-controller="newTicketCtrl">
-        <p>
-          <span>Ticket Id</span>
-          <span>Summary</span>
-          <span>Priority</span>
-          <span>Reported by</span>
-          <span>Status</span>
-          <span>Action</span>
-        </p>
-        <!-- Get all tickets from tickets table (cf scope in controller) -->
-        <p ng-repeat="t in ta">
-          <span>t.id</span>
-          <span>t.sum</span>
-          <span>t.pri</span>
-          <span>t.rep</span>
-          <span>t.sta</span>
-          <span>t.act</span>
-        </p>
-      </div>
+  <header>
+    <!-- Please don't use <img> tag for logo. It should be a DIV background image instead :) -->
+    <div class="logo"></div>
+    <bar>
+      <h1>SupJiralo</h1>
+      <h2>Enjoy being Agile</h2>
+    </bar>
+    <!-- Navigation tools -->
+    <nav>
+      <ul>
+        <li><a href="{{ index_page }}">New Tickets</a></li>
+        <li><a href="add.html">Create Ticket</a></li>
+        <li><a href="show.html">All Tickets</a></li>
+        <li ng-controller="logoutCtrl"><form ng-submit="destroy()"><input type="submit" name="submit" value="Logout" /></a></li>
+      </ul>
+    </nav>
+  </header>
+  <div>
+    <h1> Welcome {{userName}}, welcome to your Profile !</h1>
+    <h2> New Tickets</h2>
+    <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
+    <div ng-controller="newTicketCtrl">
+      <p>
+        <span>Ticket Id</span>
+        <span>Summary</span>
+        <span>Priority</span>
+        <span>Reported by</span>
+        <span>Status</span>
+        <span>Action</span>
+      </p>
+      <!-- Get all tickets from tickets table (cf scope in controller) -->
+      <p ng-repeat="t in ta">
+        <span>t.id</span>
+        <span>t.sum</span>
+        <span>t.pri</span>
+        <span>t.rep</span>
+        <span>t.sta</span>
+        <span>t.act</span>
+      </p>
     </div>
-  </body>
-</html>
+  </div>
+</div>
