--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body ng-app='jirallo' ng-class='bodyClass' ng-controller="indexController">
   <div ui-view>
+    <span> If you see this message, this mean you are not login. Go back to <a href='/'>Home to Login :) </a></span>
   </div>
 
   <!-- loading JS -->
