Update :  Add Ticket API working.

--- a/main_view.html
+++ b/main_view.html
@@ -1,16 +1,38 @@
- <div>
+<!-- Header to be inserted on every page.  -->
+<!-- Header to be inserted on every page.  -->
+<header>
+  <!-- Please don't use <img> tag for logo. It should be a DIV background image instead :) -->
+  <div class="logo"></div>
+  <bar>
+    <h1>SupJiralo</h1>
+    <h2>Enjoy being Agile</h2>
+  </bar>
+  <!-- Navigation tools -->
+  <nav ng-show='logged'>
+    <ul>
+      <li><a ui-sref="private">New Tickets</a></li>
+      <li><a ui-sref="addticket">Create Ticket</a></li>
+      <li><a ui-sref="showticket">All Tickets</a></li>
+      <li ng-controller="logoutCtrl"><form ng-submit="destroy()"><input type="submit" name="submit" value="Logout" /></a></li>
+    </ul>
+  </nav>
+</header>
+
+<div>
   <h1>Hello, welcome to our Agile ticket manager !</h1>
   <br />
   <span>If you want to use or services, please log in :)</span>
-  <form ng-submit='submit()' ng-controller="loginForm">
-    <label>
-      <span>Enter your user name : </span>
-      <input type="text" ng-model="userName" name="username" placeholder="Enter your User Name Here :)" required />
-    </label>
-    <label>
-      <span>Enter your password here : </span>
-      <input type="password" ng-model="userPass" name="userpass" required />
-    </label>
-    <input type="submit" value="Submit" />
-  </form>
+    <form></form> <!-- This line seems to be ignore sometimes. No clue why. -->
+    <form ng-submit='submit()' ng-controller="loginForm">
+      <label>
+        <span>Enter your user name : </span>
+        <input type="text" ng-model="userName" name="username" placeholder="Enter your User Name Here :)" required />
+      </label>
+      <label>
+        <span>Enter your password here : </span>
+        <input type="password" ng-model="userPass" name="userpass" required />
+      </label>
+      <input type="submit" value="Submit" />
+    </form>
+  
 </div>
