--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Loading CSS -->
     <link href='style/style.css' rel='stylesheet'>
   </head>
-  <body ng-app='jirallo' ng-class='bodyClass' ng-controller="mainCtrl" >
+  <body ng-app='jirallo' ng-class='bodyClass' >
     <div ui-view>
       <span> If you see this message, this mean you are not login. Go back to <a href='/'>Home to Login :) </a></span>
     </div>
@@ -17,6 +17,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="/angoose/angoose-client.js"></script>
     <script src='js/app.js'></script>
     <script src='js/controllers/userCtrl.js'></script>
     <script src='js/controllers/ticketsCtrl.js'></script>
