Standart functionnality onboarded : Application Users can Login, Logout, create ticket and have list of tickets.
On Going : Small CSS Features so I can have better UI test ;)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body ng-app='jirallo' ng-class='bodyClass' >
     <div ui-view>
-      <span> If you see this message, this mean you are not login. Go back to <a href='/'>Home to Login :) </a></span>
+      <span> If you see this message, this mean you are not login. Go back to <a ui-sref='index'>Home to Login :) </a></span>
     </div>
 
     <!-- loading JS -->
