--- a/private/index.html
+++ b/private/index.html
@@ -10,9 +10,9 @@
   <!-- Navigation tools -->
   <nav>
     <ul>
-      <li><a ui-sref="private">New Tickets</a></li>
+      <li><a ui-sref="logged">New Tickets</a></li>
       <li><a ui-sref="addticket">Create Ticket</a></li>
-      <li><a ui-sref="showticket">All Tickets</a></li>
+      <li><a ui-sref="listtickets">All Tickets</a></li>
       <li ng-controller="logoutCtrl"><form ng-submit="destroy()"><input type="submit" name="submit" value="Logout" /></form></li>
     </ul>
   </nav>
