--- a/private/index.html
+++ b/private/index.html
@@ -1,23 +1,25 @@
 <div ng-controller="mainCtrl">
 <!-- Header to be inserted on every page.  -->
-<header>
-  <!-- Please don't use <img> tag for logo. It should be a DIV background image instead :) -->
-  <div class="logo"></div>
-  <bar>
-    <h1>SupJiralo</h1>
-    <h2>Enjoy being Agile</h2>
-  </bar>
-  <!-- Navigation tools -->
-  <nav>
-    <ul>
-      <li><a ui-sref="logged">New Tickets</a></li>
-      <li><a ui-sref="addticket">Create Ticket</a></li>
-      <li><a ui-sref="listtickets">All Tickets</a></li>
-      <li ng-controller="logoutCtrl"><form ng-submit="destroy()"><input type="submit" name="submit" value="Logout" /></form></li>
-    </ul>
-  </nav>
-</header>
-  <div>
+  <header>
+    <!-- Please don't use <img> tag for logo. It should be a DIV background image instead :) -->
+    <div>
+      <div class="logo"></div>
+      <bar>
+        <h1>SupJiralo</h1>
+        <h2>Enjoy being Agile</h2>
+      </bar>
+    </div>
+    <!-- Navigation tools -->
+    <nav>
+      <ul>
+        <li><a ui-sref="logged">New Tickets</a></li>
+        <li><a ui-sref="addticket">Create Ticket</a></li>
+        <li><a ui-sref="listtickets">All Tickets</a></li>
+        <li ng-controller="logoutCtrl"><form ng-submit="destroy()"><input type="submit" name="submit" value="Logout" /></form></li>
+      </ul>
+    </nav>
+  </header>
+  <div class='main'>
     <h1> Welcome {{userName}} to your Profile !</h1>
     <h2> New Tickets</h2>
     <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
