--- a/private/edit.html
+++ b/private/edit.html
@@ -17,13 +17,12 @@
   </nav>
 </header>
 <div>
-  <h1>Hy {{userName}}, modifi an issue ?</h1>
+  <h1>Hy {{userName}}, modifiing an issue ?</h1>
   <h2> Create Tickets</h2>
-  <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
-  <form ng-submit=submit() ng-controller="addTicketCtrl">
+  <form ng-submit=submit() ng-controller="updateTicketCtrl">
     <label>
       <span>Summary :</span>
-      <input type="text" ng-model="summary" name="summary" placeholder="Ticket name" required />
+      <input type="text" ng-model="summary" name="summary" value="{{ summary }}" readonly />
     </label>
     <label>
       <span>Description :</span>
@@ -32,6 +31,11 @@
     <label>
       <span>Priority : </span>
       <select ng-model="priorities.value" name='priority' ng-options="v for v in priorities.values" >
+      </select>
+    </label>
+    <label>
+      <span>Status : </span>
+      <select ng-model="status.value" name='priority' ng-options="v for v in status.values" >
       </select>
     </label>
     <input type='submit' value='Add' />
