--- a/private/show.html
+++ b/private/show.html
@@ -25,6 +25,7 @@
       <span>Summary</span>
       <span>Priority</span>
       <span>Reported by</span>
+      <span>Assigned to</span>
       <span>Status</span>
       <span>Action</span>
     </p>
@@ -34,6 +35,7 @@
       <span>{{ t.summary }}</span>
       <span>{{ t.priority }}</span>
       <span>{{ t.reporter }}</span>
+      <span>{{ t.assignee }}</span>
       <span>{{ t.status }}</span>
       <span ng-bind-html="useractions"></span>
     </p>
