--- a/private/show.html
+++ b/private/show.html
@@ -12,7 +12,7 @@
       <li><a ui-sref="logged">New Tickets</a></li>
       <li><a href="/#/addticket">Create Ticket</a></li>
       <li><a ui-sref="listtickets">All Tickets</a></li>
-      <li ng-controller="logoutCtrl"><form ng-submit="destroy()"><input type="submit" name="submit" value="Logout" /></form></li>
+      <li ng-controller="logoutCtrl"><button ng-click='destroy();' type="button" name="submit" >Logout</button></li>
     </ul>
   </nav>
 </header>
@@ -37,7 +37,12 @@
       <span>{{ t.reporter }}</span>
       <span>{{ t.assignee }}</span>
       <span>{{ t.status }}</span>
-      <span ng-bind-html="useractions"></span>
+      <span>
+        <button ng-click="go_details(t.summary);">Views</button>
+        <span ng-show="{{ispo}}">
+          | <button ng-click="go_edit()">Edit Ticket</button> | <button ng-click="destroy()">Delete Ticket</button>
+        </span>
+      </span>
     </p>
   </div>
 </div>
