--- a/index.html
+++ b/index.html
@@ -6,22 +6,23 @@
     <title>SupJiralo, the agile board from Supinfo !</title>
     <!-- Loading CSS -->
     <link href='style/style.css' rel='stylesheet'>
+    <link href='bower_components/ng-dialog/css/ngDialog.css' rel='stylesheet'>
+    <link href='bower_components/ng-dialog/css/ngDialog-theme-default.css' rel='stylesheet'>
   </head>
   <body ng-app='jirallo' ng-class='bodyClass' >
     <div ui-view>
       <span> If you see this message, this mean you are not login. Go back to <a ui-sref='index'>Home to Login :) </a></span>
     </div>
-
     <!-- loading JS -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
     <script src="/angoose/angoose-client.js"></script>
     <script src='js/app.js'></script>
     <script src='js/controllers/userCtrl.js'></script>
     <script src='js/controllers/ticketsCtrl.js'></script>
     <script src='js/controllers/commentsCtrl.js'></script>
-
   </body>
 </html>
