--- a/main_view.html
+++ b/main_view.html
@@ -14,11 +14,11 @@
       <li><a ui-sref="logged">New Tickets</a></li>
       <li><a ui-sref="addticket">Create Ticket</a></li>
       <li><a ui-sref="listtickets">All Tickets</a></li>
+      <li><a ui-sref="mytickets">My Tickets</a></li>
       <li ng-controller="logoutCtrl"><button ng-click='destroy();' type="button" name="submit" >Logout</button></li>
     </ul>
   </nav>
 </header>
-
 <div>
   <h1>Hello, welcome to our Agile ticket manager !</h1>
   <br />
