--- a/private/index.html
+++ b/private/index.html
@@ -14,6 +14,7 @@
       <li><a ui-sref="logged">New Tickets</a></li>
       <li><a ui-sref="addticket">Create Ticket</a></li>
       <li><a ui-sref="listtickets">All Tickets</a></li>
+      <li><a ui-sref="mytickets">My Tickets</a></li>
       <li ng-controller="logoutCtrl"><button ng-click='destroy();' type="button" name="submit" >Logout</button></li>
     </ul>
   </nav>
