--- a/private/myticket.html
+++ b/private/myticket.html
@@ -22,7 +22,7 @@
 <div class='main'>
   <h2> All tickets</h2>
   <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
-  <div ng-controller="allTicketCtrl">
+  <div ng-controller="myTicketCtrl">
     <p>
       <span>Ticket Id</span>
       <span>Summary</span>
