--- a/private/show.html
+++ b/private/show.html
@@ -12,7 +12,7 @@
   <nav>
     <ul>
       <li><a ui-sref="logged">New Tickets</a></li>
-      <li><a ui-sref="addticket">Create Ticket</a></li>
+      <li ng-show='ispo'><a ui-sref="addticket">Create Ticket</a></li>
       <li><a ui-sref="listtickets">All Tickets</a></li>
       <li><a ui-sref="mytickets">My Tickets</a></li>
       <li ng-controller="logoutCtrl"><button ng-click='destroy();' type="button" name="submit" >Logout</button></li>
@@ -24,18 +24,20 @@
   <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
   <div ng-controller="allTicketCtrl">
     <p>
-      <span>Ticket Id</span>
-      <span>Summary</span>
-      <span>Priority</span>
-      <span>Reported by</span>
-      <span>Assigned to</span>
-      <span>Status</span>
+      <span><button ng-click="order_by('_id');">Ticket Id</button></span>
+      <span><button ng-click="order_by('summary ');">Summary</button></span>
+      <span><button ng-click="order_by('creationDate');">Creation Date</button></span>
+      <span><button ng-click="order_by('priority');">Priority</button></span>
+      <span><button ng-click="order_by('reporter');">Reported by</button></span>
+      <span><button ng-click="order_by('assignee');">Assigned to</button></span>
+      <span><button ng-click="order_by('status');">Status</button></span>
       <span>Action</span>
     </p>
     <!-- Get all tickets from tickets table (cf scope in controller) -->
-    <form ng-submit='go_to_ticket()' ng-repeat="t in tickets">
+    <p ng-repeat="t in tickets | orderBy: orderPlace">
       <span>{{ t._id }}</span>
-      <span ng-model='summary'>{{ t.summary }}</span>
+      <span>{{ t.summary }}</span>
+      <span>{{ t.creationDate }}</span>
       <span>{{ t.priority }}</span>
       <span>{{ t.reporter }}</span>
       <span>{{ t.assignee }}</span>
