--- a/private/index.html
+++ b/private/index.html
@@ -23,7 +23,8 @@
   <h1> Welcome {{userName}} to your Profile !</h1>
   <h2> New Tickets</h2>
   <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
-  <div ng-controller="newTicketCtrl">
+  <!-- ng-controller="newTicketCtrl" -->
+  <div >
     <p>
       <span><button ng-click="order_by('_id');">Ticket Id</button></span>
       <span><button ng-click="order_by('summary ');">Summary</button></span>
