Update : Cleanned useless views.

--- a/private/show.html
+++ b/private/show.html
@@ -22,7 +22,7 @@
 <div class='main'>
   <h2> All tickets</h2>
   <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
-  <div ng-controller="allTicketCtrl">
+  <div>
     <p>
       <span><button ng-click="order_by('_id');">Ticket Id</button></span>
       <span><button ng-click="order_by('summary ');">Summary</button></span>
