--- a/private/edit.html
+++ b/private/edit.html
@@ -20,7 +20,8 @@
   </nav>
 </header>
 <div>
-  <h1>Hy {{userName}}, modifiing an issue ?</h1>
+<!-- Display user name -->
+  <h1>Hy {{userName}}, modifying an issue ?</h1>
   <h2> Create Tickets</h2>
   <form ng-submit=submit(back_state) ng-controller="updateTicketCtrl">
     <label>
