--- a/index.html
+++ b/index.html
@@ -4,15 +4,6 @@
     <meta charset='utf-8' />
     <meta name='viewport' content='initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width' />
     <title>SupJiralo, the agile board from Supinfo !</title>
-    <!-- Loading CSS -->
-    <link href='style/style.css' rel='stylesheet'>
-    <link href='bower_components/ng-dialog/css/ngDialog.css' rel='stylesheet'>
-    <link href='bower_components/ng-dialog/css/ngDialog-theme-default.css' rel='stylesheet'>
-  </head>
-  <body ng-app='jirallo' ng-class='bodyClass' >
-    <div ui-view>
-      <span> If you see this message, this mean you are not login. Go back to <a ui-sref='index'>Home to Login :) </a></span>
-    </div>
     <!-- loading JS -->
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
@@ -24,5 +15,16 @@
     <script src='js/controllers/userCtrl.js'></script>
     <script src='js/controllers/ticketsCtrl.js'></script>
     <script src='js/controllers/commentsCtrl.js'></script>
+    <script src="bower_components/angular-pusher/angular-pusher.min.js" type="text/javascript"></script>
+    <!-- Loading CSS -->
+    <link href='style/style.css' rel='stylesheet'>
+    <link href='bower_components/ng-dialog/css/ngDialog.css' rel='stylesheet'>
+    <link href='bower_components/ng-dialog/css/ngDialog-theme-default.css' rel='stylesheet'>
+  </head>
+  <body ng-app='jirallo' ng-class='bodyClass' >
+    <div ui-view>
+    <!-- Here will be loaded the views. -->
+      <span> If you see this message, this mean you are not login. Go back to <a ui-sref='index'>Home to Login :) </a></span>
+    </div>
   </body>
 </html>
