--- a/private/add.html
+++ b/private/add.html
@@ -12,6 +12,7 @@
   <nav>
     <ul>
       <li><a ui-sref="logged">New Tickets</a></li>
+      <!-- This line is displayed only -->
       <li ng-show='ispo'><a ui-sref="addticket">Create Ticket</a></li>
       <li><a ui-sref="listtickets">All Tickets</a></li>
       <li><a ui-sref="mytickets">My Tickets</a></li>
@@ -20,9 +21,10 @@
   </nav>
 </header>
 <div>
+<!-- Display a welcomme messae with Connected User Name -->
   <h1>Hy {{userName}}, reporting an issue ?</h1>
   <h2> Create Tickets</h2>
-  <!-- This will print table of new tickets :) div == table, p == lines, span == colulmns -->
+  <!-- This will print table to add tickets :) div == table, p == lines, span == colulmns -->
   <form ng-submit=submit() ng-controller="addTicketCtrl">
     <label>
       <span>Summary :</span>
@@ -30,10 +32,11 @@
     </label>
     <label>
       <span>Description :</span>
-      <input type="textarea" rows="4" cols="50" ng-model="description" name="description" placeholder="Ticket name" />
+      <textarea rows="4" cols="50" ng-model="description" name="description" placeholder="Ticket name" />
     </label>
     <label>
       <span>Priority : </span>
+      <!-- Display possible priorities values via angular -->
       <select ng-model="priorities.value" name='priority' ng-options="v for v in priorities.values" >
       </select>
     </label>
