--- a/index.html
+++ b/index.html
@@ -10,18 +10,55 @@
     <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/ng-dialog/js/ngDialog.js"></script>
+    <!-- <script src="bower_components/angular-pusher/angular-pusher.min.js" type="text/javascript"></script> -->
     <script src="/angoose/angoose-client.js"></script>
     <script src='js/app.js'></script>
     <script src='js/controllers/userCtrl.js'></script>
     <script src='js/controllers/ticketsCtrl.js'></script>
     <script src='js/controllers/commentsCtrl.js'></script>
-    <script src="bower_components/angular-pusher/angular-pusher.min.js" type="text/javascript"></script>
+    <script src='js/services.js'></script>
     <!-- Loading CSS -->
     <link href='style/style.css' rel='stylesheet'>
     <link href='bower_components/ng-dialog/css/ngDialog.css' rel='stylesheet'>
     <link href='bower_components/ng-dialog/css/ngDialog-theme-default.css' rel='stylesheet'>
+    <script src="/socket.io/socket.io.js"></script>
+
   </head>
   <body ng-app='jirallo' ng-class='bodyClass' >
+    <div ng-controller="indexCtrl">
+        <div class='col'>
+            <h3>Messages</h3>
+            <div class='overflowable'>
+                <p ng-repeat="message in messages">
+                </p>
+            </div>
+        </div>
+        <div class='col'>
+            <h3>Users</h3>
+            <div class='overflowable'>
+                <p ng-repeat="user in users">
+                </p>
+            </div>
+        </div>
+        <div class='clr'>
+            <h3>Messages</h3>
+            <form ng-submit='sendMessage()'></select> class='overflowable'>
+                Meesage :
+                <textarea ng-model='message'></textarea>
+                <input type='submit' value='send'/>
+            </form>
+        </div>
+        <div class='clr'>
+            <h3>Change Name</h3>
+            <p> Your curent user name is :</p>
+            <form ng-submit='changeName()'></select> class='overflowable'>
+                Meesage :
+                <textarea ng-model='newName'></textarea>
+                <input type='submit' value='Change'/>
+            </form>
+        </div>
+    </div>
+
     <div ui-view>
     <!-- Here will be loaded the views. -->
       <span> If you see this message, this mean you are not login. Go back to <a ui-sref='index'>Home to Login :) </a></span>
