Update : started design

--- a/main_view.html
+++ b/main_view.html
@@ -19,7 +19,7 @@
     </ul>
   </nav>
 </header>
-<div>
+<div class='main'>
   <h1>Hello, welcome to our Agile ticket manager !</h1>
   <br />
   <span>If you want to use or services, please log in :)</span>
